k3s/k3s-test/kubectl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
spec:
  containers:
    - name: kubectl-container
      image: bitnami/kubectl:1.19-debian-10
      resources:
        limits:
          memory: "512Mi"
          cpu: "250m"
      command: ["/bin/sh"]
      args: ["-c", "while true; do sleep 5; done"]
