k3s/k3s-test/mysql-master-slave.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: persistent-storage
              mountPath: /mnt/mysql
              subPath: mysql
            - name: mysql-conf
              mountPath: /etc/mysql/mysql.conf.d
            - name: config-map
              mountPath: /etc/config-map
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: nas-claim
        - name: mysql-conf
          emptyDir: {}
        - name: config-map
          configMap:
            name: mysql
