k3s/k3s-test/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
spec:
  selector:
    matchLabels:
      app: express-app
  replicas: 1
  template:
    metadata:
      labels:
        app: express-app
    spec:
      volumes:
        - name: volume-config
          configMap:
            name: config-map
      containers:
        - name: express-app
          image: nginx:1.15-alpine
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: volume-config
              mountPath: /usr/share/nginx/html/nginx
      imagePullSecrets:
        - name: my-secret
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 80
      protocol: TCP
      name: https
  selector:
    app: express-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    service.beta.kubernetes.io/alicloud-loadbalancer-id: lb-2zeck3xgr61ops6rhf4px
    service.beta.kubernetes.io/alicloud-loadbalancer-force-override-listeners: "true"
spec:
  rules:
    - http:
        paths:
          - path: /nginx/
            backend:
              serviceName: service-nginx
              servicePort: 80
